adding additionalIdentifier to Book